--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leandro Vianna</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="head">
+            <ul>
+                <li>Home</li>
+                <li>Produtos</li>
+                <li>Portfolio</li>
+                <li>Contato</li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
