Updating index.html,style.css, image.png

--- a/index.html
+++ b/index.html
@@ -7,23 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="head">
-            <ul>
-                <li>Home</li>
-                <li>Produtos</li>
-                <li>Portfolio</li>
-                <li>Contato</li>
-            </ul>
-        </div>
-    </header>
+    <div class="head">
+        <header>
+            <div class="items">
+                <ul>
+                    <li><button><a href="index.html">Home</a></button></li>
+                    <li><button><a href="produtos.html">Produtos</a></button></li>
+                    <li><button><a href="portfolio.html">Portfolio</a></button></li>
+                    <li><button><a href="contato.html">Contato</a></button></li>
+                </ul>
+            </div>
+        </header>
+    </div>
     <div class="container">
-        <ul>
-            <li>AAAAAAA</li>
-            <li>BBBBBBBBB</li>
-            <li>CCCCCCCCC</li>
-        </ul>
+        <div class="img">
+            <img src="img/profile_picture.png" alt="profile_picture">
+        </div>
+        <div class="text">
+            <h2><strong>Olá, eu sou Leandro Vianna</strong></h2>
 
+            <p>Engenheiro elétrico, gerente comercial e industrial, trabalhando na EletroFrio LTDA</p>
+        </div>
+        <div class="buttons">
+            <button class="produtos"><a href="produtos.html">Veja meu trabalho</a></button>
+            <button class="contato"><a href="contato.html">Contate-me</a></button>
+        </div>
     </div>
 </body>
 </html>
