Creating produtos.css, updating contato.html, index.html, portfolio.html, produtos.html, style.css

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <p>Engenheiro elétrico, gerente comercial e industrial, trabalhando na EletroFrio LTDA</p>
         </div>
         <div class="buttons">
-            <button class="produtos"><a href="produtos.html">Veja meu trabalho</a></button>
-            <button class="contato"><a href="contato.html">Contate-me</a></button>
+            <button class="buttonProdutos"><a href="produtos.html">Meu Trabalho</a></button>
+            <button class="buttonContato"><a href="contato.html">Contate-me</a></button>
         </div>
     </div>
 </body>
