Adding Images, updating portfolio.html and portfolio.css, correcting index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="text">
             <h2><strong>Olá, eu sou Leandro Vianna</strong></h2>
 
-            <p>Engenheiro elétrico, gerente comercial e industrial, trabalhando na EletroFrio LTDA</p>
+            <p>Engenheiro Eletricista, com perícia em Gerencia Comercial</p>
         </div>
         <div class="buttons">
             <button class="buttonProdutos"><a href="produtos.html">Meu Trabalho</a></button>
