--- a/portfolio.html
+++ b/portfolio.html
@@ -18,134 +18,136 @@
             </div>
         </header>
     </div>
-  <div class="card">
-    <h2>Experiência</h2>
+  <div class="container">
+    <div class="card">
+      <h2>Experiência</h2>
 
-    <div class="job">
-      <div class="job-header">
-        <img src="img/eletrofrio.png" alt="Eletrofrio" class="logo">
-        <div>
-          <h3>Gerente Comercial Nacional</h3>
-          <p><strong>Eletrofrio Refrigeração Ltda.</strong> · Tempo integral</p>
-          <p>set de 2020 – até o momento · 4 anos 9 meses</p>
-          <p>Curitiba, Paraná, Brasil · Presencial</p>
+      <div class="job">
+        <div class="job-header">
+          <img src="img/eletrofrio.png" alt="Eletrofrio" class="logo">
+          <div>
+            <h3>Gerente Comercial Nacional</h3>
+            <p><strong>Eletrofrio Refrigeração Ltda.</strong> · Tempo integral</p>
+            <p>set de 2020 – até o momento · 4 anos 9 meses</p>
+            <p>Curitiba, Paraná, Brasil · Presencial</p>
+          </div>
         </div>
+        <p class="job-description">
+          Atuo como gerente comercial nacional no Grupo Eletrofrio / Continuum / Fast, comercializando, fabricando e instalando sistemas de refrigeração, sistemas termo isolantes e sistemas de armazenamento, com o propósito de fornecer soluções completas, eficientes, sustentáveis e confiáveis, através de uma estrutura sólida, tradicional, responsável, 100% nacional e ocupada com a satisfação plena de seus clientes.
+        </p>
       </div>
-      <p class="job-description">
-        Atuo como gerente comercial nacional no Grupo Eletrofrio / Continuum / Fast, comercializando, fabricando e instalando sistemas de refrigeração, sistemas termo isolantes e sistemas de armazenamento, com o propósito de fornecer soluções completas, eficientes, sustentáveis e confiáveis, através de uma estrutura sólida, tradicional, responsável, 100% nacional e ocupada com a satisfação plena de seus clientes.
-      </p>
+
+      <div class="job">
+        <div class="job-header">
+          <img src="img/plotterracks.png" alt="Plotter Racks" class="logo">
+          <div>
+            <h3>Plotter Racks</h3>
+            <p><strong>17 anos e 7 meses</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline">
+    <div class="timeline-item">
+      <div class="sub-job">
+        <h4>Gerente de Contas</h4>
+        <p>Tempo integral</p>
+        <p>fev de 2013 – ago de 2020 · 7 anos 7 meses</p>
+        <p>Curitiba e Região, Brasil</p>
+        <p class="job-description">
+          Atuei no departamento comercial executando a gestão dos clientes, percebendo suas necessidades, desenvolvendo soluções técnicas em sistemas de refrigeração comercial e industrial, desde a pré venda através da elaboração de orçamentos, propostas comerciais e negociando contratos, até a pós venda gerenciando o processo de aplicação dos projetos de minha gestão, de forma a garantir a satisfação completa dos clientes.
+        </p>
+      </div>
     </div>
 
-    <div class="job">
-      <div class="job-header">
-        <img src="img/plotterracks.png" alt="Plotter Racks" class="logo">
-        <div>
-          <h3>Plotter Racks</h3>
-          <p><strong>17 anos e 7 meses</strong></p>
-        </div>
+    <div class="timeline-item">
+      <div class="sub-job">
+        <h4>Coordenador de Engenharia de Aplicação</h4>
+        <p>Tempo Integral</p>
+        <p>fev de 2003 – jan de 2013 · 10 anos</p>
+        <p class="job-description">
+          Atuei no departamento de engenharia de aplicação da empresa Plotter Engenharia desde 02.2003, com participação na elaboração de projetos, execução de obras, coordenação de equipes , start up e comissionamento de sistemas, equipamentos e instalações de refrigeração comercial para frio alimentar, em obras das principais redes varejistas do país e América Latina.
+        </p>
       </div>
-
-      <div class="timeline">
-  <div class="timeline-item">
-    <div class="sub-job">
-      <h4>Gerente de Contas</h4>
-      <p>Tempo integral</p>
-      <p>fev de 2013 – ago de 2020 · 7 anos 7 meses</p>
-      <p>Curitiba e Região, Brasil</p>
-      <p class="job-description">
-        Atuei no departamento comercial executando a gestão dos clientes, percebendo suas necessidades, desenvolvendo soluções técnicas em sistemas de refrigeração comercial e industrial, desde a pré venda através da elaboração de orçamentos, propostas comerciais e negociando contratos, até a pós venda gerenciando o processo de aplicação dos projetos de minha gestão, de forma a garantir a satisfação completa dos clientes.
-      </p>
     </div>
   </div>
 
-  <div class="timeline-item">
-    <div class="sub-job">
-      <h4>Coordenador de Engenharia de Aplicação</h4>
-      <p>Tempo Integral</p>
-      <p>fev de 2003 – jan de 2013 · 10 anos</p>
-      <p class="job-description">
-        Atuei no departamento de engenharia de aplicação da empresa Plotter Engenharia desde 02.2003, com participação na elaboração de projetos, execução de obras, coordenação de equipes , start up e comissionamento de sistemas, equipamentos e instalações de refrigeração comercial para frio alimentar, em obras das principais redes varejistas do país e América Latina.
-      </p>
-    </div>
-  </div>
-</div>
+      </div>
 
-    </div>
+      <div class="job">
+        <div class="job-header">
+          <img src="img/ambev.png" alt="Ambev" class="logo">
+          <div>
+            <h3>Estágio em Engenharia</h3>
+            <p><strong>Ambev</strong> · Tempo integral</p>
+            <p>mar de 1996 – nov de 1998 · 2 anos 8 meses</p>
+            <p>Curitiba, Paraná, Brasil · Presencial</p>
+          </div>
+        </div>
+        <p class="job-description">
+          Atuei no desenvolvimento de projetos de gerenciamento da rotina de serviços e pessoas no setor de suprimentos e manutenção utilizando sistemas de nível operacional.
+        </p>
+      </div>
 
-    <div class="job">
-      <div class="job-header">
-        <img src="img/ambev.png" alt="Ambev" class="logo">
-        <div>
-          <h3>Estágio em Engenharia</h3>
-          <p><strong>Ambev</strong> · Tempo integral</p>
-          <p>mar de 1996 – nov de 1998 · 2 anos 8 meses</p>
-          <p>Curitiba, Paraná, Brasil · Presencial</p>
+      <h2>Formação acadêmica</h2>
+
+      <div class="education">
+        <div class="edu-header">
+          <img src="img/ufpr.png" alt="UFPR" class="logo">
+          <div>
+            <h3>Universidade Federal do Paraná</h3>
+            <p>Engenheiro, Engenharia Elétrica</p>
+            <p>1993 – 1999</p>
+            <p>Atividades e grupos: Estágios Internos e Externos</p>
+          </div>
         </div>
       </div>
-      <p class="job-description">
-        Atuei no desenvolvimento de projetos de gerenciamento da rotina de serviços e pessoas no setor de suprimentos e manutenção utilizando sistemas de nível operacional.
-      </p>
-    </div>
 
-    <h2>Formação acadêmica</h2>
-
-    <div class="education">
-      <div class="edu-header">
-        <img src="img/ufpr.png" alt="UFPR" class="logo">
-        <div>
-          <h3>Universidade Federal do Paraná</h3>
-          <p>Engenheiro, Engenharia Elétrica</p>
-          <p>1993 – 1999</p>
-          <p>Atividades e grupos: Estágios Internos e Externos</p>
+      <div class="education">
+        <div class="edu-header">
+          <img src="img/pucpr.png" alt="PUCPR" class="logo">
+          <div>
+            <h3>Pontifícia Universidade Católica do Paraná</h3>
+            <p>Pós-graduação Lato Sensu – Especialização, Administração, Negócios e Marketing</p>
+            <p>2021 – 2022</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="education">
-      <div class="edu-header">
-        <img src="img/pucpr.png" alt="PUCPR" class="logo">
-        <div>
-          <h3>Pontifícia Universidade Católica do Paraná</h3>
-          <p>Pós-graduação Lato Sensu – Especialização, Administração, Negócios e Marketing</p>
-          <p>2021 – 2022</p>
+      <div class="education">
+        <div class="edu-header">
+          <img src="img/pucpr.png" alt="PUCPR" class="logo">
+          <div>
+            <h3>Pontifícia Universidade Católica do Paraná</h3>
+            <p>Especialista, Engenharia de Negócios</p>
+            <p>2010 – 2011</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="education">
-      <div class="edu-header">
-        <img src="img/pucpr.png" alt="PUCPR" class="logo">
-        <div>
-          <h3>Pontifícia Universidade Católica do Paraná</h3>
-          <p>Especialista, Engenharia de Negócios</p>
-          <p>2010 – 2011</p>
+      <div class="education">
+        <div class="edu-header">
+          <img src="img/cefet.png" alt="CEFETPR" class="logo">
+          <div>
+            <h3>Centro Federal de Educação Tecnológica do Paraná</h3>
+            <p>Especialista em Engenharia de Produção, Engenharia e Gestão Industrial</p>
+            <p>2002 - 2003</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="education">
-      <div class="edu-header">
-        <img src="img/cefet.png" alt="CEFETPR" class="logo">
-        <div>
-          <h3>Centro Federal de Educação Tecnológica do Paraná</h3>
-          <p>Especialista em Engenharia de Produção, Engenharia e Gestão Industrial</p>
-          <p>2002 - 2003</p>
+      <div class="education">
+        <div class="edu-header">
+          <img src="img/cefet.png" alt="CEFETPR" class="logo">
+          <div>
+            <h3>Centro Federal de Educação Tecnológica do Paraná</h3>
+            <p>Técnico, Eletrônica</p>
+            <p>1988 - 1992</p>
+            <p>Atividades e grupos: Estágios Internos e Externos</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="education">
-      <div class="edu-header">
-        <img src="img/cefet.png" alt="CEFETPR" class="logo">
-        <div>
-          <h3>Centro Federal de Educação Tecnológica do Paraná</h3>
-          <p>Técnico, Eletrônica</p>
-          <p>1988 - 1992</p>
-          <p>Atividades e grupos: Estágios Internos e Externos</p>
-        </div>
-      </div>
     </div>
-
   </div>
 </body>
 </html>
