--- a/produtos.html
+++ b/produtos.html
@@ -21,26 +21,31 @@
     </div>
 
     <div class="container">
-        <div class="card">
-            <div class="content">
-                <h3></h3>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                <h3></h3>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                <h3></h3>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                <h3></h3>
-            </div>
+    <div class="card">
+        <div class="content">
+            <h3>Desenvolvimento de Projetos de Sistema de Refrigeração</h3>
+            <p>Criação de soluções personalizadas para sistemas de refrigeração industrial com foco em eficiência e inovação.</p>
         </div>
     </div>
+    <div class="card">
+        <div class="content">
+            <h3>Coordenação de Engenharia de Aplicação</h3>
+            <p>Gerenciamento de equipes técnicas para garantir a aplicação correta de produtos e sistemas nos projetos dos clientes.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="content">
+            <h3>Gestão Administrativa Comercial</h3>
+            <p>Organização e controle dos processos comerciais, administrativos e financeiros com foco em desempenho e resultados.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="content">
+            <h3>Gestão de Vendas</h3>
+            <p>Planejamento estratégico de vendas, relacionamento com clientes e expansão de mercado.</p>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
