--- a/produtos.html
+++ b/produtos.html
@@ -30,7 +30,7 @@
     <div class="card">
         <div class="content">
             <h3>Coordenação de Engenharia de Aplicação</h3>
-            <p>Gerenciamento de equipes técnicas para garantir a aplicação correta de produtos e sistemas nos projetos dos clientes.</p>
+            <p>Gerenciamento de equipes técnicas, etapas de montagem e comissionamento dos equipamentos para garantir a aplicação correta de produtos e sistemas nos projetos dos clientes.</p>
         </div>
     </div>
     <div class="card">
