Fixing produtos.html and produtos.css, fixing style.css, updating img

--- a/produtos.html
+++ b/produtos.html
@@ -24,25 +24,33 @@
     <div class="card">
         <div class="content">
             <h3>Desenvolvimento de Projetos de Sistema de Refrigeração</h3>
+            <img src="img/desenvolvimentodeprojetos.png" alt="desenvolvimentodeprojetos">
             <p>Criação de soluções personalizadas para sistemas de refrigeração industrial com foco em eficiência e inovação.</p>
+            <a href="https://www.linkedin.com/posts/eletrofrio-refrigeracao-ltda-_a-eletrofrio-atrav%C3%A9s-de-sua-divis%C3%A3o-industrial-ugcPost-7315699107811987456-VtaO?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAEwy23UBbjkguliNU5PXPF4XsbL2H_49rQY" target="_blank" class="veja-mais">Veja Mais</a>
         </div>
     </div>
     <div class="card">
         <div class="content">
             <h3>Coordenação de Engenharia de Aplicação</h3>
+            <img src="img/engenhariadeaplicacao.png" alt="engenhariadeaplicacao">
             <p>Gerenciamento de equipes técnicas, etapas de montagem e comissionamento dos equipamentos para garantir a aplicação correta de produtos e sistemas nos projetos dos clientes.</p>
+            <a href="https://www.linkedin.com/posts/leandro-vianna-5548062b_abras-abaas-refrigeracao-activity-7286161128307482624-eB-x?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAEwy23UBbjkguliNU5PXPF4XsbL2H_49rQY" class="veja-mais" target="_blank">Veja Mais</a>
         </div>
     </div>
     <div class="card">
         <div class="content">
             <h3>Gestão Administrativa Comercial</h3>
+            <img src="img/gestaoadministrativa.png" alt="gestaoadministrativa">
             <p>Organização e controle dos processos comerciais, administrativos e financeiros com foco em desempenho e resultados.</p>
+            <a href="https://www.linkedin.com/posts/leandro-vianna-5548062b_fastgondolas-activity-7050256770169999360-7hmF?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAEwy23UBbjkguliNU5PXPF4XsbL2H_49rQY" target="_blank" class="veja-mais">Veja Mais</a>
         </div>
     </div>
     <div class="card">
         <div class="content">
             <h3>Gestão de Vendas</h3>
+            <img src="img/gestaodevendas.png" alt="gestaodevendas">
             <p>Planejamento estratégico de vendas, relacionamento com clientes e expansão de mercado.</p>
+            <a href="https://www.linkedin.com/posts/leandro-vianna-5548062b_fast-continuum-construtivosisotaezrmicos-activity-6933191568518471680-6T0a?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAEwy23UBbjkguliNU5PXPF4XsbL2H_49rQY" target="_blank" class="veja-mais">Veja Mais</a>
         </div>
     </div>
 </div>
