--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Experiência e Formação</title>
   <link rel="stylesheet" href="portfolio.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="head">
