fixing contato.html and contato.css

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <h2><strong>Olá, eu sou Leandro Vianna</strong></h2>
 
             <p>Engenheiro Eletricista, com perícia em Gerencia Comercial</p>
+            <p><strong>Engenharia que entrega resultados!</strong></p>
         </div>
         <div class="buttons">
             <button class="buttonProdutos"><a href="produtos.html">Meu Trabalho</a></button>
